--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <br />
 						<h3><b>About me</b></h3>
 						<h6 class="font-lite-black"><b>PROFESSIONAL PATH</b></h6>
-            <img src="assets/myphoto.jpg" width="180" height="200" class= "imageAboutPage" alt="">
+            <img src="assets/mypic.jpg" width="180" height="200" class= "imageAboutPage" alt="">
             <a href="https://www.persistent.com/" target="_blank"><h4 style="color: purple;"><b><u>Persistent Systems</u></b></h4></a>
 						<h5 class="font-yellow"><b>Software Engineer</b></h5>
 						<h6 class="margin-t-10">October 2021-Current</h6>
