--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
           <br />
 					<p class="margin-b-50">The feeling of become better version of myself always keeps me motivated to learn new technology and build cool stuff.
             <b>I am just a stubborn individual in the field of Software Engineering</b>
-           who is exploring computer science domain.I believe the quickest way of not liking any technology is  to be master of that.My area of interests include full stack development,Python programming and machine Learning research.</p> 
+           who is exploring computer science domain.I believe the quickest way of not liking any technology is  to be master of that.My area of interests include full stack development,Python programming and machine Learning research.
+					I want to use my technical expertise to the betterment of society and make world a better place to live for the every creation of GOD.</p> 
           <hr></hr>
           <div class="row mt-3">
             <div class="col-md-6">
