--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <li><a href="https://github.com/AntimaDwivedi" target="_blank"><img src="assets/github.png"></a></li>
                   <li><a href="https://www.linkedin.com/in/antima-dwivedi-69a79a1aa//"target="_blank"><img src="assets/linkedin.png"></a></li>
                   <li><a href="https://twitter.com/DwivediAntima" target="_blank"><img src="assets/twitter.png"></a></li>
-                  <li><a href="https://instagram.com/antima_dwivedi7/" target="_blank"><img src="assets/instagram.png"></a></li>
+<!--                   <li><a href="https://instagram.com/antima_dwivedi7/" target="_blank"><img src="assets/instagram.png"></a></li> -->
                 </ul>
               </div>
             </div>
@@ -293,7 +293,7 @@
                 <li><a href="https://github.com/AntimaDwivedi" target="_blank"><img src="assets/github.png"></a></li>
                 <li><a href="https://www.linkedin.com/in/antima-dwivedi-69a79a1aa//" target="_blank"><img src="assets/linkedin.png"></a></li>    
                 <li><a href="https://twitter.com/DwivediAntima" target="_blank"><img src="assets/twitter.png"></a></li>
-                <li><a href="https://instagram.com/antima_dwivedi7/"target="_blank"><img src="assets/instagram.png"></a></li>
+<!--                 <li><a href="https://instagram.com/antima_dwivedi7/"target="_blank"><img src="assets/instagram.png"></a></li> -->
                 <br>
                 <li><h4 class="purple"><b>By failing to prepare, you are preparing to fail.</b></h4></li>
                 <br>
