--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                <!-- <a href="#" class="menu"><img src="assets/menu.png"></a>  -->
               <div class="hero-text">
                 <h1>Hi,👋 I am Antima Dwivedi</h1>
-                <h3>Fullstack Developer</h3>
+                <h3>Software Engineer</h3>
                 <ul class="social-links">
                   <li class="label">Join me here</li>
                   <li><a href="https://github.com/AntimaDwivedi" target="_blank"><img src="assets/github.png"></a></li>
