--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
               </nav>  
                <!-- <a href="#" class="menu"><img src="assets/menu.png"></a>  -->
               <div class="hero-text">
-	<div class = "center">
-                <h1>Hi,👋 I am Antima </h1>
+                <h1><center>Hi,👋 I am Antima</center> </h1>
                 <h3>Software Engineer</h3>
                 <ul class="social-links">
                   <li class="label">Join me here</li>
