--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2><center>Hi,👋 I am Antima</center></h2>
                 <h3><center>Software Engineer</center></h3>
                 <ul class="social-links">
-                  <li class="label"><center>Join me here</center></li>
+                  <li class="label">Join me here</li>
                   <li><a href="https://github.com/AntimaDwivedi" target="_blank"><img src="assets/github.png"></a></li>
                   <li><a href="https://www.linkedin.com/in/antima-dwivedi-69a79a1aa//"target="_blank"><img src="assets/linkedin.png"></a></li>
                   <li><a href="https://twitter.com/DwivediAntima" target="_blank"><img src="assets/twitter.png"></a></li>
