--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               </nav>  
                <!-- <a href="#" class="menu"><img src="assets/menu.png"></a>  -->
               <div class="hero-text">
-                <h2><center>Hi,👋 I am Antima</center></h2>
-                <h3><center>Software Engineer</center></h3>
+                <h2>Hi,👋 I am Antima</h2>
+                <h3><center>A Software Engineer</center></h3>
                 <ul class="social-links">
                   <li class="label">Join me here</li>
                   <li><a href="https://github.com/AntimaDwivedi" target="_blank"><img src="assets/github.png"></a></li>
