--- a/index.html
+++ b/index.html
@@ -228,16 +228,13 @@
           
           <br />
           <br />
-					<p class="margin-b-50"></p> 
+					<p class="margin-b-50">Working as a Software Enginner in Persistent System.Half the battle of sotware engineering is believing that
+					you can solve any problem you get stuck on</p> 
           <hr></hr>
           <div class="row mt-3">
             <div class="col-md-6">
                 <ul class="social-links">
                     <li><h3><b>Coding Profiles 👩‍💻</b></h3></li>
-                    <br>
-                    <li><a href="https://auth.geeksforgeeks.org/user/antimadwivedi28/practice/" target="_blank"><img src="assets/Geeksforgeeks.png"></a></li>
-                    <li><a href="https://leetcode.com/AntimaDwivedi/" target="_blank"><img src="assets/leetcode.png"></a></li>    
-                    <li><a href="https://www.hackerrank.com/antimadwivedi28?hr_r=1" target="_blank"><img src="assets/HackerRank.jpg"></a></li>
                     <li><h3><b>Articles Contributed 📝</b></h3></li>
                     <br>
                     <li><a href="https://auth.geeksforgeeks.org/user/antimadwivedi28/articles/" target="_blank"><img src="assets/Geeksforgeeks.png"></a></li>
