--- a/index.html
+++ b/index.html
@@ -228,11 +228,10 @@
           
           <br />
           <br />
-					<p class="margin-b-50">Working as a Software Enginner in Persistent System.Responsible for handling the video transcoding system for a client OTT organization.
+					<p class="margin-b-50">Working as a Software Enginner in Persistent System part of a team which is responsible for handling the video transcoding system for an  OTT organization.
 • Responsible for development, testing, and deployment of different backend APIs to transcode the 
 video for Subtitle Vendors, Ad and promotion campaign.<br>
-• Handled different issues related to thumbnails of videos.<br>.I feel that Half the battle of sotware engineering is believing that
-					you can solve any problem you get stuck on and applying the ideolgy on my job daily </p> 
+</p> 
           <hr></hr>
           <div class="row mt-3">
             <div class="col-md-6">
