--- a/index.html
+++ b/index.html
@@ -228,9 +228,8 @@
           
           <br />
           <br />
-					<p class="margin-b-50">Working as a Software Enginner in Persistent System part of a team which is responsible for handling the video transcoding system for an  OTT organization.
-• Responsible for development, testing, and deployment of different backend APIs to transcode the 
-video for Subtitle Vendors, Ad and promotion campaign.<br>
+					<p class="margin-b-50">Working as a Software Enginner in Persistent System ,part of a team which is managing the content(videos ,audios,thumbnails and subtitles) for an  OTT streaming platform.
+• Responsible for development, testing, and deployment of different backend APIs to transcode the video for Subtitle Vendors, Ad and promotion campaign.<br>
 </p> 
           <hr></hr>
           <div class="row mt-3">
