--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </nav>  
                <!-- <a href="#" class="menu"><img src="assets/menu.png"></a>  -->
               <div class="hero-text">
-                <h2>Hi,👋 I am Antima</h2>
+                <h2>Hi,👋 This side Antima</h2>
                 <ul class="social-links">
                   <li class="label">Join me here</li>
                   <li><a href="https://github.com/AntimaDwivedi" target="_blank"><img src="assets/github.png"></a></li>
@@ -70,7 +70,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="heading purple"><span class="purple">Tools and Technologies</span> Exploring<br>in current Company</h1>
+              <h1 class="heading purple"><span class="purple">Tools and Technologies</span><br>exploring in current Company</h1>
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
@@ -131,7 +131,7 @@
 									<div>
                     <br />
                   </div>
-									<h6 class="progress-title"><b>Harness</b></h6>
+									<h6 class="progress-title"><b>Bitbucket</b></h6>
 								</div>
 							</div>
 						</div>
@@ -141,7 +141,7 @@
 									<div>
                     <br />
                   </div>
-									<h6 class="progress-title"><b>Video-transcoding</b></h6>
+									<h6 class="progress-title"><b>Harness</b></h6>
 								</div>
 							</div>
 						</div>
@@ -171,7 +171,7 @@
           
           <br />
           <br />
-					<p class="margin-b-50">Working as a Software Engineer in Persistent System, part of a team that is managing the content(videos,audios,thumbnails and subtitles) for an  OTT streaming platform.
+					<p class="margin-b-50">Working as a Software Engineer in Persistent System, part of a team that is managing the content(videos, audios, thumbnails, and subtitles) for an  OTT streaming platform.
 • Responsible for the development, testing, and deployment of different backend APIs to transcode the video for Subtitle Vendors, Ads, and promotion campaigns.<br>
 </p> 
           <hr></hr>
