--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h4 class="sub-heading">Some</h4>
-              <h1 class="heading purple">Old Projects<span class="purple"></span>as a tech <br>newbie</h1>
+              <h2 class="sub-heading">Old Projects</h4>
+              <h4 class="heading purple"><span class="purple"></span>as a tech newbie</h4>
               <!-- Swiper -->
               <div class="swiper-container client-swiper">
                 <div class="swiper-wrapper">
