--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="heading purple"><span class="purple">Tools and Technologies</span><br>exploring in current Company</h1>
+              <h1 class="heading purple"><span class="purple">Tools and Technologies</span></h1><br></h2>exploring in current company</h2>
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
