--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </nav>  
                <!-- <a href="#" class="menu"><img src="assets/menu.png"></a>  -->
               <div class="hero-text">
-                <h2>Hi,👋 This side Antima</h2>
+                <h2>Hi,👋 this side Antima</h2>
                 <ul class="social-links">
                   <li class="label">Join me here</li>
                   <li><a href="https://github.com/AntimaDwivedi" target="_blank"><img src="assets/github.png"></a></li>
@@ -70,7 +70,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="heading purple"><span class="purple">Tools and Technologies</span></h1><br></h2>exploring in current company</h2>
+<!--               <h1 class="heading purple"><span class="purple">Tools and Technologies</span>exploring in current company</h2> -->
+		     <h1 class="heading purple"><span class="purple"></span>Tools and Technologies exploring in current workplace</h1>
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
@@ -199,6 +200,12 @@
 	</section><!-- about-section -->
 	</section>
       <!-- Statistics -->
+
+
+<br>
+	<br>
+	<br>
+				
    <br>
 <br>
   
@@ -206,8 +213,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="sub-heading">Old Projects</h1>
-              <h2 class="heading purple"><span class="purple"></span>as a tech newbie</h2>
+              <h1 class="heading purple"><span class="purple"></span>Old Projects as a tech newbie</h1>
               <!-- Swiper -->
               <div class="swiper-container client-swiper">
                 <div class="swiper-wrapper">
