--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="row">
             <div class="col-md-12">
 <!--               <h1 class="heading purple"><span class="purple">Tools and Technologies</span>exploring in current company</h2> -->
-		     <h1 class="heading purple"><span class="purple"></span>Tools and Technologies exploring in current workplace</h1>
+		     <h1 class="heading purple"><span class="purple"></span>Technologies exploring in current workplace</h1>
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
