--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 							</div>
 						</div>
 						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-5=">
-								<div class="radial-progress" data-prog-percent=".70">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".100">
 									<div></div>
 									<h6 class="progress-title"><b>Java</b></h6>
 								</div>
@@ -99,7 +99,7 @@
             </div>
             <div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".75">
+								<div class="radial-progress" data-prog-percent=".100">
 									<div></div>
 									<h6 class="progress-title"><b>Python</b></h6>
 								</div>
@@ -118,7 +118,7 @@
 						</div>
             <div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".70">
+								<div class="radial-progress" data-prog-percent=".100">
 									<div>
                     <br />
                   </div>
@@ -128,7 +128,7 @@
 						</div>
             <div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".60">
+								<div class="radial-progress" data-prog-percent=".100">
 									<div>
                     <br />
                   </div>
