--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						</div>
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".100">
+								<div class="radial-progress" data-prog-percent="100">
 									<div></div>
 									<h6 class="progress-title"><b>Java</b></h6>
 								</div>
