--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-<!--               <h1 class="heading purple"><span class="purple">Tools and Technologies</span>exploring in current company</h2> -->
-		     <h1 class="heading purple"><span class="purple"></span>Technologies exploring in  workplace</h1>
+<!--               <h1 class="heading purple"><span class="purple">Tools and Technologies</span></h2> -->
+		     <h1 class="heading purple"><span class="purple"></span>Tools and Technologies</h1>
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
 								<div class="radial-progress" data-prog-percent=".80">
 									<div></div>
-									<h6 class="progress-title"><b>Spring-boot</b></h6>
+									<h6 class="progress-title"><b>Python</b></h6>
 								</div>
 							</div>
 						</div>
@@ -85,7 +85,15 @@
 							<div class="radial-prog-area margin-b-50">
 								<div class="radial-progress" data-prog-percent=".80">
 									<div></div>
-									<h6 class="progress-title"><b>Java</b></h6>
+									<h6 class="progress-title"><b>Machine Learning</b></h6>
+								</div>
+							</div><!-- radial-prog-area-->
+						</div><!-- col-sm-6-->
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".80">
+									<div></div>
+									<h6 class="progress-title"><b>Django</b></h6>
 								</div>
 							</div><!-- radial-prog-area-->
 						</div><!-- col-sm-6-->
@@ -93,7 +101,7 @@
 							<div class="radial-prog-area margin-b-50">
 								<div class="radial-progress" data-prog-percent=".75">
 									<div></div>
-									<h6 class="progress-title"><b>SQL</b></h6>
+									<h6 class="progress-title"><b>Java</b></h6>
 								</div>
 							</div><!-- radial-prog-area-->
             </div>
@@ -101,7 +109,7 @@
 							<div class="radial-prog-area margin-b-50">
 								<div class="radial-progress" data-prog-percent=".100">
 									<div></div>
-									<h6 class="progress-title"><b>Python</b></h6>
+									<h6 class="progress-title"><b>Spring boot</b></h6>
 								</div>
 							</div><!-- radial-prog-area-->
 						</div><!-- col-sm-6-->
@@ -112,7 +120,7 @@
 									<div>
                     <br />
                   </div>
-									<h6 class="progress-title"><b>Jenkins</b></h6>
+									<h6 class="progress-title"><b>SQL</b></h6>
 								</div>
 							</div>
 						</div>
@@ -132,7 +140,7 @@
 									<div>
                     <br />
                   </div>
-									<h6 class="progress-title"><b>Bitbucket</b></h6>
+									<h6 class="progress-title"><b>Jenkins</b></h6>
 								</div>
 							</div>
 						</div>
@@ -142,7 +150,7 @@
 									<div>
                     <br />
                   </div>
-									<h6 class="progress-title"><b>Harness</b></h6>
+									<h6 class="progress-title"><b>Git</b></h6>
 								</div>
 							</div>
 						</div>
