--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".100">
+								<div class="radial-progress" data-prog-percent=".70">
 									<div></div>
 									<h6 class="progress-title"><b>Spring boot</b></h6>
 								</div>
@@ -126,7 +126,7 @@
 						</div>
             <div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".100">
+								<div class="radial-progress" data-prog-percent=".60">
 									<div>
                     <br />
                   </div>
@@ -136,7 +136,7 @@
 						</div>
             <div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".100">
+								<div class="radial-progress" data-prog-percent=".60">
 									<div>
                     <br />
                   </div>
@@ -144,9 +144,41 @@
 								</div>
 							</div>
 						</div>
-            <div class="col-sm-6 col-md-6 col-lg-3">
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".70">
+									<div></div>
+									<h6 class="progress-title"><b>Rabbit MQ</b></h6>
+								</div>
+							</div><!-- radial-prog-area-->
+						</div><!-- col-sm-6-->
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".68">
+									<div></div>
+									<h6 class="progress-title"><b>Redis</b></h6>
+								</div>
+							</div><!-- radial-prog-area-->
+						</div><!-- col-sm-6-->
+						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
 								<div class="radial-progress" data-prog-percent=".75">
+									<div></div>
+									<h6 class="progress-title"><b>Postman</b></h6>
+								</div>
+							</div><!-- radial-prog-area-->
+						</div><!-- col-sm-6-->
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".40">
+									<div></div>
+									<h6 class="progress-title"><b>Kubernetes</b></h6>
+								</div>
+							</div><!-- radial-prog-area-->
+						</div><!-- col-sm-6-->
+            <div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".80">
 									<div>
                     <br />
                   </div>
@@ -195,9 +227,9 @@
             <div class="col-md-6">
               <h3><b>Acedmic Background 📚</b></h3>
               <ul type="disc">
-                  <li>👩‍🎓 Bachelor of technology-<b>8.43</b></li>
-                  <li>🏫Intermediate-<b>8.8</b></li>
-                  <li>👯High School-<b>8.1</b></li>
+                  <li>👩‍🎓 Bachelor of technology-<b>8.4/10</b></li>
+                  <li>🏫Intermediate-<b>8.8/10</b></li>
+                  <li>👯High School-<b>8.1/10</b></li>
                   
                 </ul>
                   
@@ -228,13 +260,13 @@
                   <div class="swiper-slide client-box">
                     <img src="assets/bookflix.jpg">
                     <h3 class="text-left title">BOOKFLIX</h3>
-                    <p class="text-left tag">Online Book Store to read and listen books without the worry of carrying them out with you always.</p>
+                    <p class="text-left tag">Online Book Store to read and listen to books without the worry of carrying them out with you always.</p>
                     <p class="text-left"><a href="https://github.com/AntimaDwivedi/BOOKFLIX">Know More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
                     <img src="assets/Drowsy.jpg">
                     <h3 class="text-left title">Accident Prone Situation Prediction of Vehicle Using Machine Learning Approaches</h3>
-                    <p class="text-left tag"><br>The project proposes a model that is able to warn the driver whether the car cabin is prone to accidents or not.</p>
+                    <p class="text-left tag"><br>The project proposes a model that can warn the driver whether the car cabin is prone to accidents or not.</p>
                     <p class="text-left"><a href="https://github.com/AntimaDwivedi/Accident-Prone-Situation-Prediction-of-Vehicle-Using-Machine-Learning-Approaches/blob/main/Research%20Paper.pdf">Know More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
