--- a/index.html
+++ b/index.html
@@ -253,14 +253,14 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="heading purple"><span class="purple"></span>Old Projects as a tech newbie</h1>
+              <h1 class="heading purple"><span class="purple"></span>Projects</h1>
               <!-- Swiper -->
               <div class="swiper-container client-swiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide client-box">
                     <img src="assets/bookflix.jpg">
                     <h3 class="text-left title">BOOKFLIX</h3>
-                    <p class="text-left tag">Online Book Store to read and listen to books without the worry of carrying them out with you always.</p>
+                    <p class="text-left tag">Online Book Store to read and listen to books without worrying  to carry  them out with you always.</p>
                     <p class="text-left"><a href="https://github.com/AntimaDwivedi/BOOKFLIX">Know More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
