--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </nav>  
                <!-- <a href="#" class="menu"><img src="assets/menu.png"></a>  -->
               <div class="hero-text">
-                <h2>Hi,👋 this side Antima</h2>
+                <h2>Hi,👋 this is Antima</h2>
                 <ul class="social-links">
                   <li class="label">Join me here</li>
                   <li><a href="https://github.com/AntimaDwivedi" target="_blank"><img src="assets/github.png"></a></li>
@@ -170,19 +170,43 @@
 						</div><!-- col-sm-6-->
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".40">
+								<div class="radial-progress" data-prog-percent=".80">
 									<div></div>
-									<h6 class="progress-title"><b>Kubernetes</b></h6>
+									<h6 class="progress-title"><b>Git</b></h6>
+								</div>
+							</div><!-- radial-prog-area-->
+						</div><!-- col-sm-6-->
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".80">
+									<div></div>
+									<h6 class="progress-title"><b>Apache maven</b></h6>
+								</div>
+							</div><!-- radial-prog-area-->
+						</div><!-- col-sm-6-->
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".80">
+									<div></div>
+									<h6 class="progress-title"><b>Ubuntu OS</b></h6>
+								</div>
+							</div><!-- radial-prog-area-->
+						</div><!-- col-sm-6-->
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".80">
+									<div></div>
+									<h6 class="progress-title"><b>Grafana</b></h6>
 								</div>
 							</div><!-- radial-prog-area-->
 						</div><!-- col-sm-6-->
             <div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".80">
+								<div class="radial-progress" data-prog-percent=".45">
 									<div>
                     <br />
                   </div>
-									<h6 class="progress-title"><b>Git</b></h6>
+									<h6 class="progress-title"><b>Kubernetes</b></h6>
 								</div>
 							</div>
 						</div>
