--- a/index.html
+++ b/index.html
@@ -281,17 +281,17 @@
               <!-- Swiper -->
               <div class="swiper-container client-swiper">
                 <div class="swiper-wrapper">
+		  <div class="swiper-slide client-box">
+                    <img src="assets/Drowsy.jpg">
+                    <h3 class="text-left title">Accident Prone Situation Prediction of Vehicle Using Machine Learning Approaches</h3>
+                    <p class="text-left tag"><br>The project proposes a model that can warn the driver whether the car cabin is prone to accidents or not.</p>
+                    <p class="text-left"><a href="https://github.com/AntimaDwivedi/Accident-Prone-Situation-Prediction-of-Vehicle-Using-Machine-Learning-Approaches">Know More &#8594;</a></p>
+                  </div>	
                   <div class="swiper-slide client-box">
                     <img src="assets/bookflix.jpg">
                     <h3 class="text-left title">BOOKFLIX</h3>
                     <p class="text-left tag">Online Book Store to read and listen to books without worrying  to carry  them out with you always.</p>
                     <p class="text-left"><a href="https://github.com/AntimaDwivedi/BOOKFLIX">Know More &#8594;</a></p>
-                  </div>
-                  <div class="swiper-slide client-box">
-                    <img src="assets/Drowsy.jpg">
-                    <h3 class="text-left title">Accident Prone Situation Prediction of Vehicle Using Machine Learning Approaches</h3>
-                    <p class="text-left tag"><br>The project proposes a model that can warn the driver whether the car cabin is prone to accidents or not.</p>
-                    <p class="text-left"><a href="https://github.com/AntimaDwivedi/Accident-Prone-Situation-Prediction-of-Vehicle-Using-Machine-Learning-Approaches/blob/main/Research%20Paper.pdf">Know More &#8594;</a></p>
                   </div>
                   <div class="swiper-slide client-box">
                     <img src="assets/snake.jpg">
