--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
               <h3>Lines of code committed</h3>
             </div>
             <div class="col-md-4 text-center stat-box">
-              <h1 class="pink"><span class="">100</span>K</h1>
+              <h1 class="pink"><span class="">50k</span>K</h1>
               <h3>Cups of Coffee Intake</h3>
             </div>
             <div class="col-md-4 text-center stat-box">
-              <h1 class="blue"><span class="">1</span>M</h1>
+              <h1 class="blue"><span class="">100</span>K</h1>
               <h3>Songs heard</h3>
             </div>
             
