--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               <h3><b>Certification 🎓</b></h3>
               <ul type="disc">
                   <li><a href="https://www.credential.net/6a1192b7-52df-4ef5-86ab-76d84d099b66" target="_blank">Google Cloud Digital Leader</a></li>		  
-	          <li><a href="https://certificates.mooc.fi/validate/u2dyfbksx" target="_blank">Elements of AI</li><br>
+	          <li><a href="https://certificates.mooc.fi/validate/u2dyfbksx" target="_blank">Elements of AI</li>
 		  <li><a href="https://drive.google.com/file/d/1ACTWiVCpHArTIGseV-BJqRE6fFSn5Q9g/view?usp=sharing" target="_blank">30 days AI Internship</a></li>
 		  <li><a href="https://drive.google.com/file/d/1lpY9VkRccwC4YdfJDJ-NqvjQQDtzJnEE/view?usp=sharing" target="_blank">Python Intern at TCSiON</a></li> 
 		      
