--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress">
+								<div class="radial-progress"  data-prog-percent=".80">
 									<div></div>
 									<h6 class="progress-title"><b>Python</b></h6>
 								</div>
@@ -261,7 +261,7 @@
           </div>
 		  <div class="col-md-6">
               <h3><b>Awards and Recognition 🏆</b></h3>
-                  <ul class="social-links" type = "disc">
+                  <ul class=type = "disc">
 	           <li><a href="https://drive.google.com/file/d/1dzlozVZmapsUmm5sV0Jm-tyQ3G-zjgTY/view?usp=sharing"target="_blank">Peristent Bravo Award<img src="assets/Persistent System.png" ></a></li>
                   <li><a href="https://drive.google.com/file/d/1t2pA5i9Gxko7ArwkzbXJkY-jh2YfKqhw/view?usp=sharing"target="_blank">Capgemini Tech Challenge<img src="assets/Capgemini.png"></a></li>
                   <li></li>		  
