--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress"  data-prog-percent=".80">
+								<div class="radial-progress" >
 									<div></div>
 									<h6 class="progress-title"><b>Python</b></h6>
 								</div>
@@ -261,7 +261,7 @@
           </div>
 		  <div class="col-md-6">
               <h3><b>Awards and Recognition 🏆</b></h3>
-                  <ul class=type = "disc">
+                  <ul type = "disc">
 	           <li><a href="https://drive.google.com/file/d/1dzlozVZmapsUmm5sV0Jm-tyQ3G-zjgTY/view?usp=sharing"target="_blank">Peristent Bravo Award<img src="assets/Persistent System.png" ></a></li>
                   <li><a href="https://drive.google.com/file/d/1t2pA5i9Gxko7ArwkzbXJkY-jh2YfKqhw/view?usp=sharing"target="_blank">Capgemini Tech Challenge<img src="assets/Capgemini.png"></a></li>
                   <li></li>		  
@@ -278,7 +278,7 @@
               <ul type="disc">
                   <li><a href="https://www.credential.net/6a1192b7-52df-4ef5-86ab-76d84d099b66" target="_blank">Google Cloud Digital Leader</a></li>		  
 	          <li><a href="https://certificates.mooc.fi/validate/u2dyfbksx" target="_blank">Elements of AI</li>
-		  <li><a href="https://drive.google.com/file/d/1ACTWiVCpHArTIGseV-BJqRE6fFSn5Q9g/view?usp=sharing" target="_blank">30 days AI Internship</a></li>
+		  <li><a href="https://drive.google.com/file/d/1ACTWiVCpHArTIGseV-BJqRE6fFSn5Q9g/view?usp=sharing" target="_blank">30 days with  AI </a></li>
 		  <li><a href="https://drive.google.com/file/d/1lpY9VkRccwC4YdfJDJ-NqvjQQDtzJnEE/view?usp=sharing" target="_blank">Python Intern at TCSiON</a></li> 
 		      
                 </ul>
