--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" >
+								<div class="radial-progress"  data-prog-percent=".80 >
 									<div></div>
 									<h6 class="progress-title"><b>Python</b></h6>
 								</div>
