--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <ul class="social-links">
                   <li class="label">Join me here</li>
                   <li><a href="https://github.com/AntimaDwivedi" target="_blank"><img src="assets/github.png"></a></li>
-                  <li><a href="https://www.linkedin.com/in/antima-dwivedi-69a79a1aa//"target="_blank"><img src="assets/linkedin.png"></a></li>
+                  <li><a href="https://www.linkedin.com/in/antima-dwivedi-69a79a1aa/"target="_blank"><img src="assets/linkedin.png"></a></li>
                   <li><a href="https://twitter.com/DwivediAntima" target="_blank"><img src="assets/twitter.png"></a></li>
 <!--                   <li><a href="https://instagram.com/antima_dwivedi7/" target="_blank"><img src="assets/instagram.png"></a></li> -->
                 </ul>
@@ -261,7 +261,7 @@
           </div>
 		  <div class="col-md-6">
               <h3><b>Awards and Recognition 🏆</b></h3>
-                  <ul type="disc">
+                  <ul type=class="social-links">
 	           <li><a href="https://drive.google.com/file/d/1dzlozVZmapsUmm5sV0Jm-tyQ3G-zjgTY/view?usp=sharing"target="_blank">Peristent Bravo Award<img src="assets/Persistent System.png" ></a></li>
                   <li><a href="https://drive.google.com/file/d/1t2pA5i9Gxko7ArwkzbXJkY-jh2YfKqhw/view?usp=sharing"target="_blank">Capgemini Tech Challenge<img src="assets/Capgemini.png"></a></li>
                   <li></li>		  
