--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
 		  <div class="col-md-6">
               <h3><b>Awards and Recognition 🏆</b></h3>
                   <ul type=class="social-links">
-	           <li><a href="https://drive.google.com/file/d/1dzlozVZmapsUmm5sV0Jm-tyQ3G-zjgTY/view?usp=sharing"target="_blank">Peristent Bravo Award<img src="assets/Persistent System.png" ></a></li>
-                  <li><a href="https://drive.google.com/file/d/1t2pA5i9Gxko7ArwkzbXJkY-jh2YfKqhw/view?usp=sharing"target="_blank">Capgemini Tech Challenge<img src="assets/Capgemini.png"></a></li>
+	           <li><a href="https://drive.google.com/file/d/1dzlozVZmapsUmm5sV0Jm-tyQ3G-zjgTY/view?usp=sharing"target="_blank">Peristent Bravo Award<img src="assets/Persistent System.png"width="40" height="40" ></a></li>
+                  <li><a href="https://drive.google.com/file/d/1t2pA5i9Gxko7ArwkzbXJkY-jh2YfKqhw/view?usp=sharing"target="_blank">Capgemini Tech Challenge<img src="assets/Capgemini.png" width="40" height="40"></a></li>
                   <li></li>		  
                   </ul> 
                   
