--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
           
           <br />
           <br />
-					<p class="margin-b-50">• As a vital member of a dynamic client environment, my role encompasses the comprehensive management of<br>
-        diverse multimedia content, spanning videos, audios, thumbnails, and subtitles, within the framework of an OTT streaming platform.<br>
-• Responsible for the end-to-end process of developing, testing, and deploying various backend APIs tailored for video<br>
-   transcoding for Subtitle Vendors, Ad management, and promotional campaigns. This involved leveraging frameworks such as Spring Boot and Django to ensure robust and efficient functionality.<br>
-• Meticulously diagnosing and rectifying numerous production issues on video streaming, content delivery, and infrastructure scalability, ensuring seamless operation and optimal performance.<br>
+					<p class="margin-b-50">• As a vital member of a dynamic client environment, my role encompasses the comprehensive management of
+        diverse multimedia content, spanning videos, audios, thumbnails, and subtitles, within the framework of an OTT streaming platform.
+• Responsible for the end-to-end process of developing, testing, and deploying various backend APIs tailored for video
+   transcoding for Subtitle Vendors, Ad management, and promotional campaigns. This involved leveraging frameworks such as Spring Boot and Django to ensure robust and efficient functionality.
+• Meticulously diagnosing and rectifying numerous production issues on video streaming, content delivery, and infrastructure scalability, ensuring seamless operation and optimal performance.
 • Contributed to a team initiative aimed at migrating from Cloudinary thumbnail URLs to Akamai thumbnail URLs. This transition was undertaken to streamline image optimization tools and mitigate expenses.
 </p> 
           <hr></hr>
@@ -265,7 +265,7 @@
 		  <div class="col-md-6">
               <h3><b>Awards and Recognition 🏆</b></h3>
                   <ul type=class="social-links">
-	           <li><a href="https://drive.google.com/file/d/1dzlozVZmapsUmm5sV0Jm-tyQ3G-zjgTY/view?usp=sharing"target="_blank">Peristent Bravo Award<img src="assets/Persistent System.png"width="35" height="35" ></a></li>
+	           <li><a href="https://drive.google.com/file/d/1dzlozVZmapsUmm5sV0Jm-tyQ3G-zjgTY/view?usp=sharing"target="_blank">Peristent Bravo Award<img src="assets/Persistent System.png"width="40" height="40" ></a></li>
                   <li><a href="https://drive.google.com/file/d/1t2pA5i9Gxko7ArwkzbXJkY-jh2YfKqhw/view?usp=sharing"target="_blank">Capgemini Tech Challenge<img src="assets/Capgemini.png" width="60" height="40"></a></li>		  
                   </ul> 
 		    
