--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						</div><!-- col-sm-6-->
             <div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent="1">
+								<div class="radial-progress">
 									<div></div>
 									<h6 class="progress-title"><b>Java</b></h6>
 								</div>
@@ -265,7 +265,7 @@
 		  <div class="col-md-6">
               <h3><b>Awards and Recognition 🏆</b></h3>
                   <ul type=class="social-links">
-	           <li><a href="https://drive.google.com/file/d/1dzlozVZmapsUmm5sV0Jm-tyQ3G-zjgTY/view?usp=sharing"target="_blank">Peristent Bravo Award<img src="assets/Persistent System.png"width="40" height="40" ></a></li>
+	           <li><a href="https://drive.google.com/file/d/1dzlozVZmapsUmm5sV0Jm-tyQ3G-zjgTY/view?usp=sharing"target="_blank">Persistent Bravo Award<img src="assets/Persistent System.png"width="40" height="40" ></a></li>
                   <li><a href="https://drive.google.com/file/d/1t2pA5i9Gxko7ArwkzbXJkY-jh2YfKqhw/view?usp=sharing"target="_blank">Capgemini Tech Challenge<img src="assets/Capgemini.png" width="75" height="40"></a></li>		  
                   </ul> 
 		    
