--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						</div><!-- col-sm-6-->
             <div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress">
+								<div class="radial-progress" data-prog-percent=".80">
 									<div></div>
 									<h6 class="progress-title"><b>Java</b></h6>
 								</div>
@@ -115,7 +115,7 @@
 						</div><!-- col-sm-6-->
 
 						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-50">
+							<div class="radial-prog-area margin-b-50" >
 								<div class="radial-progress" data-prog-percent=".75">
 									<div>
                     <br />
