--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-<!--               <h1 class="heading purple"><span class="purple">Work revolves around below technologies</span></h2> -->
-		     <h1 class="heading purple"><span class="purple"></span>Tools and Technologies</h1>
+               <h1 class="heading purple"><span class="purple">Tools and Technologies</span></h2> 
+		     <h1 class="heading purple"><span class="purple"></span>Work revolves around these technologies</h1>
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
@@ -226,7 +226,7 @@
             <br />
 						<h3><b>About me</b></h3>
 						<h6 class="font-lite-black"><b>PROFESSIONAL PATH</b></h6>
-            <img src="assets/assets/Antima_Profile_Pic.jpg" width="180" height="200" class= "imageAboutPage" alt="">
+            <img src="assets/Antima_Profile_Pic.jpg" width="180" height="200" class= "imageAboutPage" alt="">
             <a href="https://www.persistent.com/" target="_blank"><h4 style="color: purple;"><b><u>Persistent Systems</u></b></h4></a>
 						<h5 class="font-yellow"><b>Software Engineer</b></h5>
 						<h6 class="margin-t-10">October 2021-Current</h6>
