--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-               <h1 class="heading purple"><span class="purple">Tools and Technologies</span></h2> 
-		     <h4 class="heading purple"><span class="purple"></span>Work revolves around these technologies</h4>
+               <h3 class="heading purple"><span class="purple">I am revolving around these tools and technologies.</span></h3> 
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
