--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-               <h1>class="heading purple"><span class="purple">I am revolving around these tools and technologies.</span></h1> 
+               <h1 class="heading purple"><span class="purple">I am revolving around these tools and technologies.</span></h1> 
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
